tests/snapshots/run_wpt_conformance__coreml_reduceSumSquare_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 2D tensor default options",
    "coreml",
    "PASS",
)
